--- a/index.html
+++ b/index.html
@@ -637,7 +637,8 @@ ul li dt {
 <h2>Hard working student</h2>
 
 <blockquote>
-  <p><a href="https://github.com/alonnareeves/alonnareeves.github.io/raw/master/resume.pdf">Download PDF</a><br />
+  <p><a href="https://github.com/alonnareeves/alonnareeves.github.io/raw/master/resume.pdf">Download 
+PDF</a><br />
   <a href="alonna.reeves@gmail.com">alonna.reeves@gmail.com</a><br />
   (541) 729-0993</p>
 </blockquote>
@@ -682,7 +683,7 @@ Previously enrolled in Advanced Math and English.</dd>
 
 <hr />
 
-<h3 id="Extracurricular">Extracurricular Activites</h3>
+<h3 id="Activities">Activites</h3>
 
 <ol>
 <li>Track</li>
