--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ PDF</a><br />
 <dt>Pleasant Hill High School</dt>
 <dd><em>Sophomore</em>
 <strong>2012-2014</strong>
-Maintained 3.5 GPA. </br>
+Maintains a 3.5 GPA. </br>
 Currently enrolled in Scholars History, Algebra 2/Trigonometry and Spanish 2. </br>
 Previously enrolled in Advanced Math and English.</dd>
 </dl>
