Add awards section/revise

--- a/index.html
+++ b/index.html
@@ -637,8 +637,7 @@ ul li dt {
 <h2>Hard working student</h2>
 
 <blockquote>
-  <p><a href="https://github.com/alonnareeves/alonnareeves.github.io/raw/master/resume.pdf">Download 
-PDF</a><br />
+  <p><a href="resume.pdf">Download PDF</a><br />
   <a href="alonna.reeves@gmail.com">alonna.reeves@gmail.com</a><br />
   (541) 729-0993</p>
 </blockquote>
@@ -673,11 +672,49 @@ Previously enrolled in Advanced Math and English.</dd>
 </dl></li>
 <li><dl>
 <dt>Communication</dt>
-<dd>Voted into 2014-2015 Junior Class Vice President.</dd>
+<dd>Voted into 2014-2015 Junior Class Vice President. Also voted Band Librarian for 2 years.</dd>
 </dl></li>
 <li><dl>
 <dt>Sociable</dt>
 <dd>Volunteered at a Mexico mission trip, Relay for Life, and Christmas for Kids.</dd>
+</dl></li>
+</ul>
+
+<hr />
+
+<h3 id="Awards">Awards</h3>
+
+<ul>
+<li><dl>
+<dt>Voted Most Improved in Band</dt>
+<dd>Worked hard for 4 years playing flute and competing in solo competitions. Our band were state champions last year.</dd>
+</dl></li>
+<li><dl>
+<dt>Voted Most Improved in Track</dt>
+<dd>Worked hard throughout track season, gaining 2 minutes on my personal best mile time. I gained points for the team.</dd>
+</dl></li>
+<li><dl>
+<dt>Voted Best Friend in Cheerleading</dt>
+<dd>Voted &#8220;Best Friend&#8221; for my good team attitude, and sociability towards others.</dd>
+</dl></li>
+</ul>
+
+<h3></br></h3>
+
+<h3></br></h3>
+
+<ul>
+<li><dl>
+<dt>Voted Student of the Month</dt>
+<dd>Voted &#8220;Freshman Student of the Month&#8221; by teachers for my hard work and leadership.</dd>
+</dl></li>
+<li><dl>
+<dt>Voted Junior Vice President</dt>
+<dd>Voted Student Council Vice President by my peers after an impressive campaign for the school year 2014-2015.</dd>
+</dl></li>
+<li><dl>
+<dt>Voted Student Council in Band</dt>
+<dd>Voted Band Libraian for 2 years due to my ability to connect with band mates and portraying good leadership skills.</dd>
 </dl></li>
 </ul>
 
