Fix reference formatting

--- a/index.html
+++ b/index.html
@@ -739,11 +739,15 @@ Previously enrolled in Advanced Math and English.</dd>
 
 <ul>
 <li><dl>
-<dt>Timothy Meinzen | History Teacher and Mentor</dt>
+<dt>Timothy Meinzen</dt>
+<dd>History Teacher and Mentor</dd>
+
 <dd>541-736-0729 <a href="tmeinzen@gmail.com">tmeinzen@gmail.com</a></dd>
 </dl></li>
 <li><dl>
-<dt>Kelli Martin | Math Teacher and Mentor</dt>
+<dt>Kelli Martin</dt>
+<dd>Math Teacher and Mentor</dd>
+
 <dd>541-736-0719 <a href="kmartin@pleasanthill.k12.or.us">kmartin@pleasanthill.k12.or.us</a></dd>
 </dl></li>
 </ul>
