--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ ul li dt {
 
 <blockquote>
   <p><a href="resume.pdf">Download PDF</a><br />
-  <a href="alonna.reeves@gmail.com">alonna.reeves@gmail.com</a><br />
+  <a href="mailto:alonna.reeves@gmail.com">alonna.reeves@gmail.com</a><br />
   (541) 729-0993</p>
 </blockquote>
 
@@ -742,13 +742,13 @@ Previously enrolled in Advanced Math and English.</dd>
 <dt>Timothy Meinzen</dt>
 <dd>History Teacher and Mentor</dd>
 
-<dd>541-736-0729 <a href="tmeinzen@gmail.com">tmeinzen@gmail.com</a></dd>
+<dd>541-736-0729 <a href="mailto:tmeinzen@gmail.com">tmeinzen@gmail.com</a></dd>
 </dl></li>
 <li><dl>
 <dt>Kelli Martin</dt>
 <dd>Math Teacher and Mentor</dd>
 
-<dd>541-736-0719 <a href="kmartin@pleasanthill.k12.or.us">kmartin@pleasanthill.k12.or.us</a></dd>
+<dd>541-736-0719 <a href="mailto:kmartin@pleasanthill.k12.or.us">kmartin@pleasanthill.k12.or.us</a></dd>
 </dl></li>
 </ul>
 
@@ -756,7 +756,8 @@ Previously enrolled in Advanced Math and English.</dd>
 
 <h3 id="footer">Footer</h3>
 
-<p>Alonna Reeves &#8212; <a href="alonna.reeves@gmail.com">alonna.reeves@gmail.com</a> &#8212; (541) 729-0993</p>
+<p>Alonna Reeves &#8212; <a href="mailto:alonna.reeves@gmail.com">alonna.reeves@gmail.com</a> &#8212; (541) 
+729-0993</p>
 
 <hr />
 
