--- a/index.html
+++ b/index.html
@@ -646,7 +646,8 @@ ul li dt {
 
 <h3 id="profile">Profile</h3>
 
-<p>Looking forward to gaining experience and communication skills in the workforce, and flexing my strong work ethic.</p>
+<p>Dedicated and focused student who is looking to gain the experience, structure, and communication skills needed to excel as a productive, responsible worker in a structured, demanding environment. </br>
+Hungry for the opportunity to prove my dedication to productivity, and earn my place as a well respected team member.</p>
 
 <hr />
 
@@ -686,15 +687,15 @@ Previously enrolled in Advanced Math and English.</dd>
 
 <ul>
 <li><dl>
-<dt>Voted Most Improved in Band</dt>
-<dd>Worked hard for 4 years playing flute and competing in solo competitions. Our band were state champions last year.</dd>
+<dt>Most Improved Band Member</dt>
+<dd>Dedicated for 4 years playing flute and competing in solo competitions. Our band were state champions last year.</dd>
 </dl></li>
 <li><dl>
-<dt>Voted Most Improved in Track</dt>
+<dt>Most Improved Track Participant</dt>
 <dd>Worked hard throughout track season, gaining 2 minutes on my personal best mile time. I gained points for the team.</dd>
 </dl></li>
 <li><dl>
-<dt>Voted Best Friend in Cheerleading</dt>
+<dt>Elected Cheerleading Best Friend</dt>
 <dd>Voted &#8220;Best Friend&#8221; for my good team attitude, and sociability towards others.</dd>
 </dl></li>
 </ul>
@@ -705,15 +706,15 @@ Previously enrolled in Advanced Math and English.</dd>
 
 <ul>
 <li><dl>
-<dt>Voted Student of the Month</dt>
+<dt>Student of the Month</dt>
 <dd>Voted &#8220;Freshman Student of the Month&#8221; by teachers for my hard work and leadership.</dd>
 </dl></li>
 <li><dl>
-<dt>Voted Junior Vice President</dt>
+<dt>Junior Vice President</dt>
 <dd>Voted Student Council Vice President by my peers after an impressive campaign for the school year 2014-2015.</dd>
 </dl></li>
 <li><dl>
-<dt>Voted Student Council in Band</dt>
+<dt>Student Council Band Member</dt>
 <dd>Voted Band Libraian for 2 years due to my ability to connect with band mates and portraying good leadership skills.</dd>
 </dl></li>
 </ul>
@@ -756,8 +757,7 @@ Previously enrolled in Advanced Math and English.</dd>
 
 <h3 id="footer">Footer</h3>
 
-<p>Alonna Reeves &#8212; <a href="mailto:alonna.reeves@gmail.com">alonna.reeves@gmail.com</a> &#8212; (541) 
-729-0993</p>
+<p>Alonna Reeves &#8212; <a href="mailto:alonna.reeves@gmail.com">alonna.reeves@gmail.com</a> &#8212; (541) 729-0993</p>
 
 <hr />
 
